--- a/ken.html
+++ b/ken.html
@@ -12,14 +12,13 @@
     <div class="content">
         <h1 class="judul">Biodata</h1>
         <ul>
-            <li>Nama : Kendra Dika Firmansyah</li>
-            <li>TTL : Bandung,23 November 2004</li>
-            <li>Jenis Kelamin : Pria</li>
-            <li>Kelas : XI</li>
-            <li>Jurusan : RPL</li>
-            <li>Skill yang dikuasai : PHP,HTML,CSS,JS</li>
+            <li>- Nama : Kendra Dika Firmansyah</li>
+            <li>- TTL : Bandung,23 November 2004</li>
+            <li>- Jenis Kelamin : Pria</li>
+            <li>- Kelas : XI</li>
+            <li>- Jurusan : RPL</li>
+            <li>- Skill yang dikuasai : PHP,HTML,CSS,JS</li>
         </ul>
-
     </div>
 </div>    
 </body>
